--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
     <h1>Download UbuntuMono Nerd Fonts</h1>
     <p>Click on the links below to download the fonts:</p>
 
-    <a href="files/UbuntuMonoNerdFont-Regular.woff2" download>Download UbuntuMono Nerd Font Regular</a>
-    <a href="files/UbuntuMonoNerdFont-Bold.woff2" download>Download UbuntuMono Nerd Font Bold</a>
-    <a href="files/UbuntuMonoNerdFont-Italic.woff2" download>Download UbuntuMono Nerd Font Italic</a>
-    <a href="files/UbuntuMonoNerdFont-BoldItalic.woff2" download>Download UbuntuMono Nerd Font Bold Italic</a>
-    <a href="files/UbuntuMonoNerdFontMono-Regular.woff2" download>Download UbuntuMono Nerd Font Mono Regular</a>
-    <a href="files/UbuntuMonoNerdFontMono-Bold.woff2" download>Download UbuntuMono Nerd Font Mono Bold</a>
-    <a href="files/UbuntuMonoNerdFontMono-Italic.woff2" download>Download UbuntuMono Nerd Font Mono Italic</a>
-    <a href="files/UbuntuMonoNerdFontMono-BoldItalic.woff2" download>Download UbuntuMono Nerd Font Mono Bold Italic</a>
+    <a href="UbuntuMonoNerdFont-Regular.woff2" download>Download UbuntuMono Nerd Font Regular</a>
+    <a href="UbuntuMonoNerdFont-Bold.woff2" download>Download UbuntuMono Nerd Font Bold</a>
+    <a href="UbuntuMonoNerdFont-Italic.woff2" download>Download UbuntuMono Nerd Font Italic</a>
+    <a href="UbuntuMonoNerdFont-BoldItalic.woff2" download>Download UbuntuMono Nerd Font Bold Italic</a>
+    <a href="UbuntuMonoNerdFontMono-Regular.woff2" download>Download UbuntuMono Nerd Font Mono Regular</a>
+    <a href="UbuntuMonoNerdFontMono-Bold.woff2" download>Download UbuntuMono Nerd Font Mono Bold</a>
+    <a href="UbuntuMonoNerdFontMono-Italic.woff2" download>Download UbuntuMono Nerd Font Mono Italic</a>
+    <a href="UbuntuMonoNerdFontMono-BoldItalic.woff2" download>Download UbuntuMono Nerd Font Mono Bold Italic</a>
 
 </body>
 </html>
